# augnix-schemas

./: .gitignore  pyproject.toml
augnix_schemas/: __init__.py  agent.py  audit.py  compat.py  disposition.py  events.py  guardrail.py  knowledge.py  memory.py  pii.py  policy.py  session.py  template.py  tool.py
