[project]
name = "augnix-schemas"
version = "1.0.0"
description = "Shared API, event, and contract schemas for Augnix AI Studio"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["augnix_schemas"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
